test/method/undefined_class.result
{ name: 'Blether Parse Error',
  message: 'Unknown class Fooba',
  line: 4,
  column: 1 }
