test/method/undefined_class.st
Object subclass: #Foobar variables: #().

" Typo in class name "
!Fooba hello
	Transcript show: 'Hello'!.
